y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'
  20      | BREAK ';'
  21      | CONTINUE ';'

  22  $$5 :

  23  cmd : DO $$5 cmd WHILE '(' exp ')' ';'

  24  $$6 :

  25  $$7 :

  26  cmd : WHILE $$6 '(' exp ')' $$7 cmd

  27  $$8 :

  28  cmd : IF '(' exp $$8 ')' cmd restoIf

  29  $$9 :

  30  restoIf : ELSE $$9 cmd
  31          |

  32  exp : NUM
  33      | TRUE
  34      | FALSE
  35      | ID
  36      | '(' exp ')'
  37      | '!' exp
  38      | INC ID
  39      | DEC ID
  40      | ID INC
  41      | ID DEC
  42      | ID ADDEQ exp
  43      | exp '+' exp
  44      | exp '-' exp
  45      | exp '*' exp
  46      | exp '/' exp
  47      | exp '%' exp
  48      | exp '>' exp
  49      | exp '<' exp
  50      | exp EQ exp
  51      | exp LEQ exp
  52      | exp GEQ exp
  53      | exp NEQ exp
  54      | exp OR exp
  55      | exp AND exp
  56      | exp '?' exp ':' exp
  57      | ID '=' exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	INC  shift 29
	DEC  shift 30
	BREAK  shift 31
	CONTINUE  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	'}'  reduce 4

	$$3  goto 36
	cmd  goto 37
	exp  goto 38


state 20
	exp : ID .  (35)
	exp : ID . INC  (40)
	exp : ID . DEC  (41)
	exp : ID . ADDEQ exp  (42)
	exp : ID . '=' exp  (57)

	INC  shift 39
	DEC  shift 40
	ADDEQ  shift 41
	'='  shift 42
	EQ  reduce 35
	LEQ  reduce 35
	GEQ  reduce 35
	NEQ  reduce 35
	AND  reduce 35
	OR  reduce 35
	'?'  reduce 35
	':'  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	')'  reduce 35
	';'  reduce 35


state 21
	exp : NUM .  (32)

	.  reduce 32


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 43
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 44
	.  error


state 24
	cmd : IF . '(' exp $$8 ')' cmd restoIf  (28)

	'('  shift 45
	.  error


state 25
	cmd : WHILE . $$6 '(' exp ')' $$7 cmd  (26)
	$$6 : .  (24)

	.  reduce 24

	$$6  goto 46


state 26
	exp : TRUE .  (33)

	.  reduce 33


state 27
	exp : FALSE .  (34)

	.  reduce 34


state 28
	cmd : DO . $$5 cmd WHILE '(' exp ')' ';'  (23)
	$$5 : .  (22)

	.  reduce 22

	$$5  goto 47


state 29
	exp : INC . ID  (38)

	ID  shift 48
	.  error


state 30
	exp : DEC . ID  (39)

	ID  shift 49
	.  error


state 31
	cmd : BREAK . ';'  (20)

	';'  shift 50
	.  error


state 32
	cmd : CONTINUE . ';'  (21)

	';'  shift 51
	.  error


state 33
	exp : '!' . exp  (37)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 52


state 34
	exp : '(' . exp ')'  (36)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 53


state 35
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 54


state 36
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 55
	.  error


state 37
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 38
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	';'  shift 70
	.  error


state 39
	exp : ID INC .  (40)

	.  reduce 40


state 40
	exp : ID DEC .  (41)

	.  reduce 41


state 41
	exp : ID ADDEQ . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 71


state 42
	exp : ID '=' . exp  (57)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 72


state 43
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 73
	.  error


state 44
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 74
	.  error


state 45
	cmd : IF '(' . exp $$8 ')' cmd restoIf  (28)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 75


state 46
	cmd : WHILE $$6 . '(' exp ')' $$7 cmd  (26)

	'('  shift 76
	.  error


state 47
	cmd : DO $$5 . cmd WHILE '(' exp ')' ';'  (23)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	INC  shift 29
	DEC  shift 30
	BREAK  shift 31
	CONTINUE  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	.  error

	cmd  goto 77
	exp  goto 38


state 48
	exp : INC ID .  (38)

	.  reduce 38


state 49
	exp : DEC ID .  (39)

	.  reduce 39


state 50
	cmd : BREAK ';' .  (20)

	.  reduce 20


state 51
	cmd : CONTINUE ';' .  (21)

	.  reduce 21


state 52
	exp : '!' exp .  (37)
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	.  reduce 37


state 53
	exp : '(' exp . ')'  (36)
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	')'  shift 78
	.  error


state 54
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	INC  shift 29
	DEC  shift 30
	BREAK  shift 31
	CONTINUE  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	'}'  shift 79
	.  error

	cmd  goto 37
	exp  goto 38


state 55
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 56
	exp : exp EQ . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 80


state 57
	exp : exp LEQ . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 81


state 58
	exp : exp GEQ . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 82


state 59
	exp : exp NEQ . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 83


state 60
	exp : exp AND . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 84


state 61
	exp : exp OR . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 85


state 62
	exp : exp '?' . exp ':' exp  (56)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 86


state 63
	exp : exp '>' . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 87


state 64
	exp : exp '<' . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 88


state 65
	exp : exp '+' . exp  (43)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 89


state 66
	exp : exp '-' . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 90


state 67
	exp : exp '*' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 91


state 68
	exp : exp '/' . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 92


state 69
	exp : exp '%' . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 93


state 70
	cmd : exp ';' .  (14)

	.  reduce 14


71: shift/reduce conflict (shift 56, reduce 42) on EQ
71: shift/reduce conflict (shift 57, reduce 42) on LEQ
71: shift/reduce conflict (shift 58, reduce 42) on GEQ
71: shift/reduce conflict (shift 59, reduce 42) on NEQ
71: shift/reduce conflict (shift 60, reduce 42) on AND
71: shift/reduce conflict (shift 61, reduce 42) on OR
71: shift/reduce conflict (shift 62, reduce 42) on '?'
71: shift/reduce conflict (shift 63, reduce 42) on '>'
71: shift/reduce conflict (shift 64, reduce 42) on '<'
71: shift/reduce conflict (shift 65, reduce 42) on '+'
71: shift/reduce conflict (shift 66, reduce 42) on '-'
71: shift/reduce conflict (shift 67, reduce 42) on '*'
71: shift/reduce conflict (shift 68, reduce 42) on '/'
71: shift/reduce conflict (shift 69, reduce 42) on '%'
state 71
	exp : ID ADDEQ exp .  (42)
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	':'  reduce 42
	')'  reduce 42
	';'  reduce 42


state 72
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)
	exp : ID '=' exp .  (57)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	':'  reduce 57
	')'  reduce 57
	';'  reduce 57


state 73
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 94
	.  error


state 74
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 95
	','  reduce 17

	$$4  goto 96


state 75
	cmd : IF '(' exp . $$8 ')' cmd restoIf  (28)
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)
	$$8 : .  (27)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	')'  reduce 27

	$$8  goto 97


state 76
	cmd : WHILE $$6 '(' . exp ')' $$7 cmd  (26)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 29
	DEC  shift 30
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 98


state 77
	cmd : DO $$5 cmd . WHILE '(' exp ')' ';'  (23)

	WHILE  shift 99
	.  error


state 78
	exp : '(' exp ')' .  (36)

	.  reduce 36


state 79
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


state 80
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp EQ exp .  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 50
	LEQ  reduce 50
	GEQ  reduce 50
	NEQ  reduce 50
	AND  reduce 50
	OR  reduce 50
	'?'  reduce 50
	':'  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	')'  reduce 50
	';'  reduce 50


state 81
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp LEQ exp .  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 51
	LEQ  reduce 51
	GEQ  reduce 51
	NEQ  reduce 51
	AND  reduce 51
	OR  reduce 51
	'?'  reduce 51
	':'  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	')'  reduce 51
	';'  reduce 51


state 82
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp GEQ exp .  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 52
	LEQ  reduce 52
	GEQ  reduce 52
	NEQ  reduce 52
	AND  reduce 52
	OR  reduce 52
	'?'  reduce 52
	':'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	')'  reduce 52
	';'  reduce 52


state 83
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp NEQ exp .  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 53
	LEQ  reduce 53
	GEQ  reduce 53
	NEQ  reduce 53
	AND  reduce 53
	OR  reduce 53
	'?'  reduce 53
	':'  reduce 53
	'>'  reduce 53
	'<'  reduce 53
	')'  reduce 53
	';'  reduce 53


state 84
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp AND exp .  (55)
	exp : exp . '?' exp ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	AND  reduce 55
	OR  reduce 55
	'?'  reduce 55
	':'  reduce 55
	')'  reduce 55
	';'  reduce 55


state 85
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp OR exp .  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	OR  reduce 54
	'?'  reduce 54
	':'  reduce 54
	')'  reduce 54
	';'  reduce 54


state 86
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)
	exp : exp '?' exp . ':' exp  (56)

	EQ  shift 56
	LEQ  shift 57
	GEQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	'?'  shift 62
	':'  shift 100
	'>'  shift 63
	'<'  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	.  error


state 87
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp '>' exp .  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 48
	LEQ  reduce 48
	GEQ  reduce 48
	NEQ  reduce 48
	AND  reduce 48
	OR  reduce 48
	'?'  reduce 48
	':'  reduce 48
	'>'  reduce 48
	'<'  reduce 48
	')'  reduce 48
	';'  reduce 48


state 88
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp '<' exp .  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 49
	LEQ  reduce 49
	GEQ  reduce 49
	NEQ  reduce 49
	AND  reduce 49
	OR  reduce 49
	'?'  reduce 49
	':'  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	')'  reduce 49
	';'  reduce 49


state 89
	exp : exp . '+' exp  (43)
	exp : exp '+' exp .  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 43
	LEQ  reduce 43
	GEQ  reduce 43
	NEQ  reduce 43
	AND  reduce 43
	OR  reduce 43
	'?'  reduce 43
	':'  reduce 43
	'>'  reduce 43
	'<'  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	')'  reduce 43
	';'  reduce 43


state 90
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp '-' exp .  (44)
	exp : exp . '*' exp  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	EQ  reduce 44
	LEQ  reduce 44
	GEQ  reduce 44
	NEQ  reduce 44
	AND  reduce 44
	OR  reduce 44
	'?'  reduce 44
	':'  reduce 44
	'>'  reduce 44
	'<'  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	')'  reduce 44
	';'  reduce 44


state 91
	exp : exp . '+' exp  (43)
	exp : exp . '-' exp  (44)
	exp : exp . '*' exp  (45)
	exp : exp '*' exp .  (45)
	exp : exp . '/' exp  (46)
	exp : exp . '%' exp  (47)
	exp : exp . '>' exp  (48)
	exp : exp . '<' exp  (49)
	exp : exp . EQ exp  (50)
	exp : exp . LEQ exp  (51)
	exp : exp . GEQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . AND exp  (55)
	exp : exp . '?' exp ':' exp  (56)

	.  reduce 45

